# gen/api/go/helloworld/v1/helloworld_echo.pb.go
@@ -36,7 +36,7 @@ type _GreeterService struct {
 func (s *_GreeterService) _handler_SayHello_0(ctx v4.Context) error {
 	var in SayHelloRequest
 	if err := ctx.Bind(&in); err != nil {
-		ctx.Error(v4.NewHTTPError(http.StatusOK, err))
+		ctx.Error(err)
 		return nil
 	}
 	md := metadata.New(nil)
@@ -46,7 +46,27 @@ func (s *_GreeterService) _handler_SayHello_0(ctx v4.Context) error {
 	newCtx := metadata.NewIncomingContext(ctx.Request().Context(), md)
 	out, err := s.server.(GreeterServiceEchoServer).SayHello(newCtx, &in)
 	if err != nil {
-		ctx.Error(v4.NewHTTPError(http.StatusOK, err))
+		ctx.Error(err)
+		return nil
+	}
+
+	return ctx.JSON(http.StatusOK, out)
+}
+
+func (s *_GreeterService) _handler_SayHello_1(ctx v4.Context) error {
+	var in SayHelloRequest
+	if err := ctx.Bind(&in); err != nil {
+		ctx.Error(err)
+		return nil
+	}
+	md := metadata.New(nil)
+	for k, v := range ctx.Request().Header {
+		md.Set(k, v...)
+	}
+	newCtx := metadata.NewIncomingContext(ctx.Request().Context(), md)
+	out, err := s.server.(GreeterServiceEchoServer).SayHello(newCtx, &in)
+	if err != nil {
+		ctx.Error(err)
 		return nil
 	}
 
@@ -55,6 +75,8 @@ func (s *_GreeterService) _handler_SayHello_0(ctx v4.Context) error {
 
 func (s *_GreeterService) registerService() {
 
-	s.router.Add("POST", "/v1/helloworld.Greeter/SayHello", s._handler_SayHello_0)
+	s.router.Add("GET", "/v1/helloworld.Greeter/SayHello/:name", s._handler_SayHello_0)
+
+	s.router.Add("POST", "/v1/helloworld.Greeter/SayHello", s._handler_SayHello_1)
 
 }
